--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@gluestack-ui/tooltip": "^0.1.44",
     "@legendapp/motion": "^2.4.0",
     "@preact/signals-react": "^3.2.0",
-    "dff-util": "^1.1.6",
+    "dff-util": "1.3.3",
     "lucide-react-native": "^0.513.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
