--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pi": "cd ios && RCT_NEW_ARCH_ENABLED=1 exec pod install"
   },
   "dependencies": {
-    "@expo/html-elements": "0.4.2",
+    "@expo/html-elements": "0.12.5",
     "@gluestack-ui/accordion": "^1.0.14",
     "@gluestack-ui/actionsheet": "^0.2.53",
     "@gluestack-ui/alert": "^0.1.16",
@@ -42,45 +42,45 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/tooltip": "^0.1.44",
     "@legendapp/motion": "^2.4.0",
-    "@preact/signals-react": "^3.2.0",
+    "@preact/signals-react": "^3.2.1",
     "dff-util": "1.3.3",
-    "lucide-react-native": "^0.513.0",
+    "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-hook-form": "^7.57.0",
-    "react-i18next": "^15.5.2",
-    "react-native": "0.79.3",
+    "react": "19.1.0",
+    "react-hook-form": "^7.61.0",
+    "react-i18next": "^15.6.1",
+    "react-native": "0.80.1",
     "react-native-auto-route": "^0.3.3",
     "react-native-css-interop": "^0.1.22",
-    "react-native-mmkv": "^3.2.0",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-reanimated": "3.18.0",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-svg": "15.12.0",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/runtime": "^7.27.6",
+    "@react-native-community/cli": "19.1.0",
     "@react-native-community/cli-platform-android": "18.0.0",
     "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.3",
-    "@react-native/eslint-config": "0.79.3",
-    "@react-native/metro-config": "0.79.3",
-    "@react-native/typescript-config": "0.79.3",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@react-native/babel-preset": "0.80.1",
+    "@react-native/eslint-config": "0.80.1",
+    "@react-native/metro-config": "0.80.1",
+    "@react-native/typescript-config": "0.80.1",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.8",
+    "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "jscodeshift": "0.15.2",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
+    "eslint": "^9.31.0",
+    "jest": "^30.0.5",
+    "jscodeshift": "17.3.0",
+    "prettier": "3.6.2",
+    "react-test-renderer": "19.1.0",
+    "typescript": "5.8.3"
   },
   "engines": {
     "node": ">=18"
